# graph-augmented-retrieval-system

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
configs/: config.yaml  serving.yaml
data/: README.md
results/: test_metrics.csv
scripts/: build_corpus.py  build_graph.py  build_vectorstore.py  evaluate.py  load_data.py  precompute_seeds.py  train.py
service/: serve.py
src/data/: corpus.py  dataset.py  graph.py  vectorstore.py
src/evaluation/: evaluator.py
src/models/: gnn.py  loss.py
src/serving/: inference.py
src/utils/: config.py  logger.py
